Migration to Java8 Streams API (remove Vavr.io)