@@ -1,9 +1,9 @@
 package com.github.ggalmazor.ltdownsampling;
 
-import io.vavr.collection.List;
-
 import java.math.BigDecimal;
 import java.math.MathContext;
+import java.util.Arrays;
+import java.util.List;
 
 class Area<T extends Point> implements Comparable<Area<T>> {
   private final T generator;
@@ -16,12 +16,12 @@ class Area<T extends Point> implements Comparable<Area<T>> {
 
   static <U extends Point> Area<U> ofTriangle(Point a, U b, Point c) {
     // area of a triangle = |[Ax(By - Cy) + Bx(Cy - Ay) + Cx(Ay - By)] / 2|
-    List<BigDecimal> addends = List.of(
+    List<BigDecimal> addends = Arrays.asList(
         a.getX().multiply(b.getY().subtract(c.getY())),
         b.getX().multiply(c.getY().subtract(a.getY())),
         c.getX().multiply(a.getY().subtract(b.getY()))
     );
-    BigDecimal sum = addends.fold(BigDecimal.ZERO, BigDecimal::add);
+    BigDecimal sum = addends.stream().reduce(BigDecimal.ZERO, BigDecimal::add);
     BigDecimal half = sum
         .divide(BigDecimal.valueOf(2), MathContext.UNLIMITED);
     BigDecimal value = half.abs();
@@ -30,6 +30,10 @@ class Area<T extends Point> implements Comparable<Area<T>> {
 
   T getGenerator() {
     return generator;
+  }
+
+  public BigDecimal getValue() {
+    return value;
   }
 
   @Override
